--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -15,6 +15,6 @@
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.2;
-  color: #000;
+  line-height: 1.1;
+  color: $color-black;
 }
