--- a/src/baseStyles/reset.scss
+++ b/src/baseStyles/reset.scss
@@ -6,7 +6,7 @@ html, body {
   overflow-x: hidden;
 }
 
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,input,textarea,p,blockquote,th,td{
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,input,textarea,p,blockquote,th,td, button{
   margin: 0;
   padding: 0;
 }
@@ -67,7 +67,7 @@ h3,
 h1,
 h2,
 option {
-  transition: 0.6s;
+  transition: 0.3s;
 }
 
 button {
