--- a/src/baseStyles/variables.scss
+++ b/src/baseStyles/variables.scss
@@ -1,1 +1,10 @@
-$color-yellow: #FFC907;
+$color-black: #000;
+$color-grey-1: #6E6E6E;
+$color-grey-2: #6E6E6E;
+$color-grey-2: #C8C8C8;
+$color-grey-3: #F1F1F1;
+$color-red: #D92C2C;
+$color-green: #007E06;
+$color-blue: #106DA2;
+$color-brown: #AE6D0C;
+$color-black-product: #444444;
