--- a/src/Components/Main/Main.scss
+++ b/src/Components/Main/Main.scss
@@ -3,9 +3,17 @@
 
 .main {
   flex: 1 0 auto;
+  margin-bottom: 73px;
 }
 
 .page-title {
   font-size: 40px;
   line-height: 42px;
+}
+
+.page-subtitle {
+  margin-top: 18px;
+  margin-bottom: 30px;
+  font-size: 28px;
+  line-height: 30px;
 }
