--- a/src/Components/Form/Form.scss
+++ b/src/Components/Form/Form.scss
@@ -76,10 +76,24 @@
     &-address {
       width: 100%;
     }
+
+    &--error {
+      .form__contacts__container--input {
+        border-color: $color-red;
+      }
+
+      .error {
+        position: absolute;
+        bottom: -15px;
+        font-size: 12px;
+        color: $color-red;
+      }
+    }
   }
 
   &__radio {
     width: 100%;
+    position: relative;
     margin-bottom: 20px;
     cursor: pointer;
 
