--- a/src/Components/Product/Product.scss
+++ b/src/Components/Product/Product.scss
@@ -1,4 +1,5 @@
 @import "src/baseStyles/variables";
+@import "src/baseStyles/smart-grid";
 
 .form__products {
   &--title {
@@ -31,6 +32,11 @@
       margin-right: 25px;
       font-size: 20px;
       line-height: 24px;
+
+      @include lm-block() {
+        margin-right: 10px;
+        font-size: 14px;
+      }
     }
 
     &--article, &--season {
@@ -151,8 +157,16 @@
         background-color: $color-grey-3;
         box-sizing: border-box;
 
+        @include lm-block() {
+          margin: 0 8px;
+        }
+
         &--num {
           margin: 0 30px;
+
+          @include lm-block() {
+            margin: 0 10px;
+          }
         }
 
         &--btn {
@@ -181,6 +195,10 @@
         &--new {
           font-size: 20px;
           white-space: nowrap;
+
+          @include lm-block() {
+            font-size: 16px;
+          }
         }
       }
     }
