--- a/src/Components/Result/Result.scss
+++ b/src/Components/Result/Result.scss
@@ -1,8 +1,13 @@
 @import "src/baseStyles/variables";
+@import "src/baseStyles/smart-grid";
 
 .form__results {
   padding: 30px 20px;
   border: 1px solid $color-grey-1;
+
+  @include md-block() {
+    margin: 40px 0;
+  }
 
   &__item {
     display: flex;
