--- a/src/Pages/PageBasket/PageBasket.scss
+++ b/src/Pages/PageBasket/PageBasket.scss
@@ -7,11 +7,13 @@
   &__right {
     @include col();
     @include size(8);
+    @include size-md(12);
   }
 
   &__left {
     @include col();
     @include size(4);
+    @include size-md(8);
   }
 
   &__title {
