--- a/src/baseStyles/smart-grid.scss
+++ b/src/baseStyles/smart-grid.scss
@@ -1,25 +1,29 @@
 $columns: 12;
 $atom: (100% / $columns);
 
-$break_lm: 1024px;
-$break_md: 940px;
+$break_xlm: 1500px;
+$break_lm: 1240px;
+$break_md: 980px;
 $break_sm: 780px;
 $break_xxs: 440px;
 
 $offset: 0px;
+$offset_xlm: $offset;
 $offset_lm: $offset;
 $offset_md: $offset;
 $offset_sm: $offset;
 $offset_xxs: $offset;
 
 $offset_one_side: ($offset / 2);
+$offset_xlm_one_side: ($offset_xlm / 2);
 $offset_lm_one_side: ($offset_lm / 2);
 $offset_md_one_side: ($offset_md / 2);
 $offset_sm_one_side: ($offset_sm / 2);
 $offset_xxs_one_side: ($offset_xxs / 2);
 
 $fields: 200px;
-$fields_lm: 50px;
+$fields_xlm: 50px;
+$fields_lm: 20px;
 $fields_md: 25px;
 $fields_sm: 15px;
 $fields_xxs: 10px;
@@ -27,6 +31,11 @@ $fields_xxs: 10px;
 @mixin wrapper-full(){
     padding-left: $fields;
     padding-right: $fields;
+
+    @include xlm-block(){
+        padding-left: $fields_xlm;
+        padding-right: $fields_xlm;
+    }
 
     @include lm-block(){
         padding-left: $fields_lm;
@@ -105,6 +114,11 @@ $fields_xxs: 10px;
     width: #{calc(#{$val} - #{$offset})};
 }
 
+@mixin size-xlm($n){
+    $val: 100% / $columns * $n;
+    @include xlm(width, #{calc(#{$val} - #{$offset_xlm})});
+}
+
 @mixin size-lm($n){
     $val: 100% / $columns * $n;
     @include lm(width, #{calc(#{$val} - #{$offset_lm})});
@@ -155,6 +169,38 @@ $fields_xxs: 10px;
 @mixin shift-padding-right($n){
     $val: 100% / $columns * $n;
     padding-right: #{calc(#{$val} + #{$offset_one_side})};
+}
+
+@mixin shift-xlm($n){
+    $val: 100% / $columns * $n;
+    @include xlm(margin-left, #{calc(#{$val} + #{$offset_xlm_one_side})});
+    @include xlm(margin-right, #{calc(#{$val} + #{$offset_xlm_one_side})});
+}
+
+@mixin shift-xlm-left($n){
+    $val: 100% / $columns * $n;
+    @include xlm(margin-left, #{calc(#{$val} + #{$offset_xlm_one_side})});
+}
+
+@mixin shift-xlm-right($n){
+    $val: 100% / $columns * $n;
+    @include xlm(margin-right, #{calc(#{$val} + #{$offset_xlm_one_side})});
+}
+
+@mixin shift-xlm-padding($n){
+    $val: 100% / $columns * $n;
+    @include xlm(padding-left, #{calc(#{$val} + #{$offset_xlm_one_side})});
+    @include xlm(padding-right, #{calc(#{$val} + #{$offset_xlm_one_side})});
+}
+
+@mixin shift-xlm-padding-left($n){
+    $val: 100% / $columns * $n;
+    @include xlm(padding-left, #{calc(#{$val} + #{$offset_xlm_one_side})});
+}
+
+@mixin shift-xlm-padding-right($n){
+    $val: 100% / $columns * $n;
+    @include xlm(padding-right, #{calc(#{$val} + #{$offset_xlm_one_side})});
 }
 
 @mixin shift-lm($n){
@@ -283,6 +329,18 @@ $fields_xxs: 10px;
 @mixin shift-xxs-padding-right($n){
     $val: 100% / $columns * $n;
     @include xxs(padding-right, #{calc(#{$val} + #{$offset_xxs_one_side})});
+}
+
+@mixin xlm($name, $value){
+    @media screen and (max-width: $break_xlm){
+        #{$name}: $value;
+    }
+}
+
+@mixin xlm-block(){
+    @media screen and (max-width: $break_xlm){
+        @content;
+    }
 }
 
 @mixin lm($name, $value){
